// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Large 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  border: 0;
  border-radius: 3em;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  color: #333;
  background-color: transparent;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 0px 1px inset;
}

<button
  className="c0"
  size="large"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  border: 0;
  border-radius: 3em;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 14px;
  padding: 11px 20px;
  color: white;
  background-color: #6D6E70;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  border: 0;
  border-radius: 3em;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 14px;
  padding: 11px 20px;
  color: #333;
  background-color: transparent;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 0px 1px inset;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  border: 0;
  border-radius: 3em;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 12px;
  padding: 10px 16px;
  color: #333;
  background-color: transparent;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 0px 1px inset;
}

<button
  className="c0"
  size="small"
>
  Button
</button>
`;
